tests/parsing/smtlib/v2.6/errors/041_index_identifier_bad_symbol_1.smt2
(set-logic ALL)
(assert ((_ _)))
