tests/parsing/smtlib/v2.6/errors/041_index_identifier_bad_symbol_1.expected
File "tests/parsing/smtlib/v2.6/errors/041_index_identifier_bad_symbol_1.smt2", line 2, character 12-13:
2 | (assert ((_ _)))
                ^
Error while parsing an indexed identifier, read the reserved word '_',
      but expected a symbol; note that keywords and reserved words (such as
      '_', 'as', ...) are not symbols, and thus are not allowed here.
